// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal should render without crashing  1`] = `
<section
  className="Modal"
>
  <Wall
    hardMode={false}
    wall={Array []}
  />
  <div
    className="Modal-content"
  >
    <img
      alt="Logo Clone 2048"
      className="logo"
      src="clone-2048.svg"
    />
    <h1
      className="Modal-title"
    />
    <Score
      best={0}
      current={0}
    />
    <button
      className="ModalAction"
      onClick={[Function]}
      type="button"
    />
  </div>
</section>
`;

exports[`Modal should render without crashing with all props 1`] = `
<section
  className="Modal"
>
  <Wall
    hardMode={true}
    wall={
      Array [
        2048,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        2,
        4,
        0,
        0,
        0,
        0,
        0,
        0,
      ]
    }
  />
  <div
    className="Modal-content"
  >
    <img
      alt="Logo Clone 2048"
      className="logo"
      src="clone-2048.svg"
    />
    <h1
      className="Modal-title"
    >
      You Won
    </h1>
    <Score
      best={2048}
      current={234}
    />
    <button
      className="ModalAction"
      onClick={[Function]}
      type="button"
    >
      Try Again
    </button>
  </div>
</section>
`;
